modified services container css

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
   
   <div id="services" class="not-visible">
     <p class="heading">WHAT I CAN DO FOR YOU</p>
-    <p class="services-text red">MVP:</p>
-    <p class="services-text"></p>
-    <p class="services-text">DEV</p>
-    <p class="services-text">/</p>
-    <p class="services-text">UX</p>
-    <p class="services-text">/</p>
-    <p class="services-text">UI</p>
+    <p class="services-text-1">MVP:</p>
+    <p class="services-text-2"></p>
+    <p class="services-text-2">DEV</p>
+    <p class="services-text-2">/</p>
+    <p class="services-text-2">UX</p>
+    <p class="services-text-2">/</p>
+    <p class="services-text-2">UI</p>
   </div>
   
   <div id="about" class="not-visible">
